--- a/less/global.less
+++ b/less/global.less
@@ -43,6 +43,7 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  margin-top: 103px; // fixed nav - not ideal, since a change in nav height would require a change here
 }
 
 header {
